--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
    --secondary-color: hsl(0, 0%, 20%);
    --link-hover: hsl(48, 100%, 50%);
    --focus-color: hsl(203, 100%, 25%);
+   --bg-gradient: linear-gradient(300deg, hsl(0, 0%, 85%) 0%, hsl(0, 0%, 100%) 100%);
+   --bg-gradient-form: linear-gradient(300deg, hsl(197, 78%, 70%) 0%, hsl(214, 78%, 61%) 100%);
 }
 
 /* Basic CSS reset */
@@ -18,6 +20,7 @@
 /* Main Style */
 body {
    background-color: var(--primary-color);
+   background: var(--bg-gradient);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
       "Open Sans", "Helvetica Neue", sans-serif;
    font-size: 1.1rem;
@@ -67,31 +70,54 @@ header {
    gap: 1rem;
 }
 
+/* Ser till att ta endast a elementet med class logo */
+header > a:has(.logo) {
+   scale: 1;
+}
+
 /* Main */
 main {
    display: flex;
    flex-direction: column;
-   gap: 4rem;
+   gap: 2rem;
+   margin-bottom: 2rem;
+}
+
+/* Sections */
+section {
+   scroll-margin-top: 9rem; /* Ser till att hamna rätt vid klickning på navbar */
    max-width: 70rem;
    margin: 0 auto;
    padding: 2rem;
 }
 
 .hero {
+   position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   padding: 0;
+   max-width: none;
+   height: 60vh;
+   width: 100%;
+}
+
+.hero h1 {
+   color: var(--primary-color);
+   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+   font-style: italic;
+   font-size: 4rem;
+   z-index: 20;
 }
 
 .hero img {
-   height: 20rem;
-   width: 20rem;
-}
-
-/* Sections */
-section {
-   scroll-margin-top: 9rem;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
 }
 
 section > div {
@@ -99,9 +125,61 @@ section > div {
    gap: 2rem;
 }
 
+#biography,
+#future-goals {
+   background-color: #fff;
+}
+
+#interests {
+   background-color: aliceblue;
+}
+
 /* Form */
+#form {
+   max-width: 50vw;
+}
+
+form {
+   background: var(--bg-gradient-form);
+   border: 2px solid var(--secondary-color);
+   border-radius: 0.5rem;
+   padding: 2rem;
+   font-size: 1.2rem;
+}
+
+form > div {
+   display: grid;
+   grid-template-columns: 100px 1fr;
+   gap: 1rem;
+   margin-top: 1rem;
+}
+
+label {
+   color: var(--primary-color);
+   text-align: end;
+}
+
+input,
+textarea {
+   padding-left: 10px;
+}
+
+textarea {
+   padding-top: 10px;
+}
+
 input:focus {
    border: 1px solid var(--focus-color);
+}
+
+button {
+   display: block;
+   border-radius: 9999px;
+   color: var(--secondary-color);
+   font-size: 1.2rem;
+   margin-top: 1rem;
+   margin-left: auto;
+   padding: 0.3rem 1.5rem;
 }
 
 /* Footer */
