--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ section {
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    font-style: italic;
    font-size: 4rem;
+   padding: 0 2rem;
    z-index: 20;
 }
 
@@ -136,7 +137,7 @@ section > div {
 
 /* Form */
 #form {
-   max-width: 50vw;
+   min-width: 50vw;
 }
 
 form {
@@ -190,4 +191,52 @@ footer {
    align-items: center;
    justify-content: space-around;
    padding: 2rem;
+}
+
+/* Media query */
+@media (max-width: 768px) {
+   header {
+      flex-direction: column;
+   }
+   nav {
+      padding: 0.8rem 0;
+   }
+
+   img {
+      margin: 0 auto;
+      max-height: 300px;
+      object-fit: contain;
+   }
+
+   .hero img {
+      max-height: 100%;
+   }
+
+   section > div {
+      flex-direction: column;
+   }
+
+   #biography div,
+   #future-goals div {
+      flex-direction: column-reverse;
+   }
+
+   #form {
+      max-width: 100vw;
+   }
+}
+
+@media (max-width: 640px) {
+   nav {
+      border-top: 1px solid var(--primary-color);
+      flex-direction: column;
+      align-items: center;
+   }
+
+   h1 {
+      text-align: center;
+   }
+   footer {
+      flex-direction: column;
+   }
 }
