--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 :root {
    --primary-color: hsl(0, 0%, 93%);
+   --section-even-color: hsl(0, 0%, 100%);
+   --section-odd-color: hsl(208, 100%, 97%);
    --secondary-color: hsl(0, 0%, 20%);
    --link-hover: hsl(48, 100%, 50%);
    --focus-color: hsl(203, 100%, 25%);
+   --underline-color: hsl(0, 100%, 50%);
    --bg-gradient: linear-gradient(300deg, hsl(0, 0%, 85%) 0%, hsl(0, 0%, 100%) 100%);
    --bg-gradient-form: linear-gradient(300deg, hsl(197, 78%, 70%) 0%, hsl(214, 78%, 61%) 100%);
 }
@@ -43,7 +46,7 @@ a:hover {
 }
 
 h2 {
-   border-bottom: 1px solid red;
+   border-bottom: 1px solid var(--underline-color);
    margin-bottom: 1rem;
    width: 100%;
 }
@@ -105,9 +108,10 @@ section {
 
 .hero h1 {
    color: var(--primary-color);
-   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
    font-style: italic;
    font-size: 4rem;
+   letter-spacing: 3px;
    padding: 0 2rem;
    z-index: 20;
 }
@@ -128,11 +132,11 @@ section > div {
 
 #biography,
 #future-goals {
-   background-color: #fff;
+   background-color: var(--section-even-color);
 }
 
 #interests {
-   background-color: aliceblue;
+   background-color: var(--section-odd-color);
 }
 
 /* Form */
