--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ section {
    font-size: 4rem;
    letter-spacing: 3px;
    padding: 0 2rem;
-   z-index: 20;
+   z-index: 2;
 }
 
 .hero img {
@@ -185,6 +185,12 @@ button {
    margin-top: 1rem;
    margin-left: auto;
    padding: 0.3rem 1.5rem;
+   transition: all 0.3s ease;
+   cursor: pointer;
+}
+
+button:hover {
+   scale: 1.1;
 }
 
 /* Footer */
